# simple-neural-network

./: .gitignore  CMakeLists.txt  CNN.cpp  CNN.h  MLP.cpp  MLP.h  Mnist_helper.cpp  Mnist_helper.h  Net.h  Network.cpp  Network.cu  Network.h  Pooling.cpp  Pooling.h  README.md  activation.h  common.h  conv.cpp  conv.h  dense.cpp  dense.h  floattest.cpp  kernel.cu  kernel.cuh  layer.h  main.cpp  mathkernel.cu  mathkernel.cuh  mnist.h  mnist_loader.h  network.cuh  train.c  train.cu
layers/: conv.cpp  conv.h  dense.cpp  dense.h  layer.h  layer_type.h  pooling.cpp  pooling.h
test/: CMakeLists.txt  NetworkTest.cpp  NetworkTest.h  cnn_test.cpp  conv_test.cpp  cublasLv1_test.cu  cublasLv2_test.cu  dense_test.cpp  eigen_test.cpp  kernel_test.cu  load_test.cu  loader_test.cpp  mlp_test.cpp  mlp_test.cu  net_test.cu  pooling_test.cpp
utils/: activation.h  convolution.cpp  convolution.h  eigen_helper.cpp  eigen_helper.h  mnist_loader.h
